--- a/app/index.html
+++ b/app/index.html
@@ -221,6 +221,7 @@
 <script src="lib/angular-block-ui/dist/angular-block-ui.js"></script>
 <script src="lib/angular-toasty/dist/angular-toasty.js"></script>
 <script src="lib/angular-scroll/angular-scroll.js"></script>
+<script src="lib/angular-truncate/src/truncate.js"></script>
 <!-- endbower -->
 <!-- endbuild -->
 <!-- build:js js/annalise.min.js -->
