--- a/app/index.html
+++ b/app/index.html
@@ -61,8 +61,8 @@
 </p>
 <![endif]-->
 <header class="header">
-    <nav class="navbar navbar-default navbar-fixed-top" ng-controller="NavBarCtrl as nav">
-        <div class="container">
+    <nav class="navbar navbar-default container">
+        <div class="container-fluid">
             <!-- Brand and toggle get grouped for better mobile display -->
 
             <div class="navbar-header">
@@ -73,116 +73,45 @@
                     <span class="icon-bar"></span>
                     <span class="icon-bar"></span>
                 </button>
-                <a class="navbar-brand" ui-sref="home"><img src="img/logo.png"
-                                                            class="logo" alt="Laredo y Asociados"></a>
+                <a class="navbar-brand" ui-sref="home"><img src="img/logo.jpg"
+                                                            class="logo" alt="Viajes Coral"></a>
             </div>
             <!-- Collect the nav links, forms, and other content for toggling -->
-            <div ng-if="!showResponsive" class="collapse navbar-collapse" collapse="nav.isCollapsed">
+
+            <div class="collapse navbar-collapse" uib-collapse="nav.isCollapsed">
                 <ul class="nav navbar-nav navbar-right">
                     <li>
                         <a du-smooth-scroll duration="800" href="#who-are" ng-if="$state.current.name == 'home'"
-                           ng-click="nav.isCollapsed = !nav.isCollapsed">Nosotros</a>
+                           ng-click="nav.isCollapsed = !nav.isCollapsed">Inicio</a>
                     </li>
                     <li>
                         <a du-smooth-scroll duration="800" href="#services" ng-if="$state.current.name == 'home'"
-                           ng-click="nav.isCollapsed = !nav.isCollapsed">Servicios</a>
+                           ng-click="nav.isCollapsed = !nav.isCollapsed">Destinos</a>
                     </li>
                     <li>
                         <a du-smooth-scroll duration="800" href="#politics" ng-if="$state.current.name == 'home'"
-                           ng-click="nav.isCollapsed = !nav.isCollapsed">Nuestra política</a>
+                           ng-click="nav.isCollapsed = !nav.isCollapsed">Paquetes</a>
                     </li>
                     <li>
                         <a du-smooth-scroll duration="800" href="#contract" ng-if="$state.current.name == 'home'"
-                           ng-click="nav.isCollapsed = !nav.isCollapsed">Porqué contratarnos</a>
+                           ng-click="nav.isCollapsed = !nav.isCollapsed">Excursiones</a>
                     </li>
                     <li>
                         <a du-smooth-scroll duration="800" href="#presence" ng-if="$state.current.name == 'home'"
-                           ng-click="nav.isCollapsed = !nav.isCollapsed">Presencia</a>
+                           ng-click="nav.isCollapsed = !nav.isCollapsed">Blog</a>
                     </li>
                     <li>
                         <a du-smooth-scroll duration="800" href="#contact" ng-if="$state.current.name == 'home'"
                            ng-click="nav.isCollapsed = !nav.isCollapsed">Contacto</a>
                     </li>
-
                     <li>
-                        <a ui-sref="post_detail({slug: 'quienes-somos1466721866'})"
-                           ng-if="$state.current.name != 'home'"
-                           ng-click="nav.isCollapsed = !nav.isCollapsed">Nosotros</a>
-                    </li>
-                    <li>
-                        <a ui-sref="home" ng-if="$state.current.name != 'home'"
-                           ng-click="nav.isCollapsed = !nav.isCollapsed">Servicios</a>
-                    </li>
-                    <li>
-                        <a ui-sref="post_detail({slug: 'nuestra-politica'})" ng-if="$state.current.name == '!home'"
-                           ng-click="nav.isCollapsed = !nav.isCollapsed">Nuestra política</a>
-                    </li>
-                    <li>
-                        <a ui-sref="post_detail({slug: 'por-que-contratarnos'})" ng-if="$state.current.name != 'home'"
-                           ng-click="nav.isCollapsed = !nav.isCollapsed">Porqué contratarnos</a>
-                    </li>
-                    <li>
-                        <a ui-sref="post_detail({slug: 'presencia'})" ng-if="$state.current.name != 'home'"
-                           ng-click="nav.isCollapsed = !nav.isCollapsed">Presencia</a>
-                    </li>
-                    <li>
-                        <a ui-sref="contact" ng-if="$state.current.name != 'home'"
-                           ng-click="nav.isCollapsed = !nav.isCollapsed">Contacto</a>
-                    </li>
-                </ul>
-            </div>
-            <div ng-if="showResponsive" class="collapse navbar-collapse" uib-collapse="nav.isCollapsed">
-                <ul class="nav navbar-nav navbar-right">
-                    <li>
-                        <a du-smooth-scroll duration="800" href="#who-are" ng-if="$state.current.name == 'home'"
-                           ng-click="nav.isCollapsed = !nav.isCollapsed">Nosotros</a>
-                    </li>
-                    <li>
-                        <a du-smooth-scroll duration="800" href="#services" ng-if="$state.current.name == 'home'"
-                           ng-click="nav.isCollapsed = !nav.isCollapsed">Servicios</a>
-                    </li>
-                    <li>
-                        <a du-smooth-scroll duration="800" href="#politics" ng-if="$state.current.name == 'home'"
-                           ng-click="nav.isCollapsed = !nav.isCollapsed">Nuestra política</a>
-                    </li>
-                    <li>
-                        <a du-smooth-scroll duration="800" href="#contract" ng-if="$state.current.name == 'home'"
-                           ng-click="nav.isCollapsed = !nav.isCollapsed">Porqué contratarnos</a>
-                    </li>
-                    <li>
-                        <a du-smooth-scroll duration="800" href="#presence" ng-if="$state.current.name == 'home'"
-                           ng-click="nav.isCollapsed = !nav.isCollapsed">Presencia</a>
-                    </li>
-                    <li>
-                        <a du-smooth-scroll duration="800" href="#contact" ng-if="$state.current.name == 'home'"
-                           ng-click="nav.isCollapsed = !nav.isCollapsed">Contacto</a>
-                    </li>
-
-                    <li>
-                        <a ui-sref="post_detail({slug: 'quienes-somos1466721866'})"
-                           ng-if="$state.current.name != 'home'"
-                           ng-click="nav.isCollapsed = !nav.isCollapsed">Nosotros</a>
-                    </li>
-                    <li>
-                        <a ui-sref="home" ng-if="$state.current.name != 'home'"
-                           ng-click="nav.isCollapsed = !nav.isCollapsed">Servicios</a>
-                    </li>
-                    <li>
-                        <a ui-sref="post_detail({slug: 'nuestra-politica'})" ng-if="$state.current.name == '!home'"
-                           ng-click="nav.isCollapsed = !nav.isCollapsed">Nuestra política</a>
-                    </li>
-                    <li>
-                        <a ui-sref="post_detail({slug: 'por-que-contratarnos'})" ng-if="$state.current.name != 'home'"
-                           ng-click="nav.isCollapsed = !nav.isCollapsed">Porqué contratarnos</a>
-                    </li>
-                    <li>
-                        <a ui-sref="post_detail({slug: 'presencia'})" ng-if="$state.current.name != 'home'"
-                           ng-click="nav.isCollapsed = !nav.isCollapsed">Presencia</a>
-                    </li>
-                    <li>
-                        <a ui-sref="contact" ng-if="$state.current.name != 'home'"
-                           ng-click="nav.isCollapsed = !nav.isCollapsed">Contacto</a>
-                    </li>
+                        <div id="wrap">
+                            <form action="" autocomplete="on">
+                                <input id="search" name="search" type="text" placeholder="Buscar">
+                                <button id="search_submit" class="btn btn-white" value="Rechercher" type="submit"><i class="fa fa-search"></i></button>
+                            </form>
+                        </div>
+                    </li> 
                 </ul>
             </div>
             <!-- /.navbar-collapse -->
@@ -238,8 +167,8 @@
 <script>(function (i, s, o, g, r, a, m) {
     i['GoogleAnalyticsObject'] = r;
     i[r] = i[r] || function () {
-                (i[r].q = i[r].q || []).push(arguments)
-            }, i[r].l = 1 * new Date();
+        (i[r].q = i[r].q || []).push(arguments)
+    }, i[r].l = 1 * new Date();
     a = s.createElement(o), m = s.getElementsByTagName(o)[0];
     a.async = 1;
     a.src = g;
