--- a/app/index.html
+++ b/app/index.html
@@ -6,7 +6,7 @@
     <title ng-bind="pageTitle">Viajes Coral - Inicio</title>
     <meta name="description" content="{{ post.excerpt }}">
     <meta name="keywords"
-          content="Inmobiliaria">
+          content="Agencia de viajes Coral">
     <meta content='width=device-width, initial-scale=1.0, maximum-scale=1.0, user-scalable=0' name='viewport'/>
     <base href="/">
     <!--Favicon-->
