--- a/app/index.html
+++ b/app/index.html
@@ -61,13 +61,13 @@
 </p>
 <![endif]-->
 <header class="header">
-    <nav class="navbar navbar-default container">
+    <nav class="navbar navbar-default container" ng-controller="NavBarCtrl as nav">
         <div class="container-fluid fluid-res">
             <!-- Brand and toggle get grouped for better mobile display -->
 
             <div class="navbar-header">
                 <button type="button" class="navbar-toggle" data-toggle="collapse"
-                        ng-click="nav.isCollapsed = !nav.isCollapsed">
+                        data-target="#header-mainMenu" aria-expanded="false">
                     <span class="sr-only">Toggle navigation</span>
                     <span class="icon-bar"></span>
                     <span class="icon-bar"></span>
@@ -78,25 +78,25 @@
             </div>
             <!-- Collect the nav links, forms, and other content for toggling -->
 
-            <div class="collapse navbar-collapse" uib-collapse="nav.isCollapsed">
+            <div class="collapse navbar-collapse" id="header-mainMenu">
                 <ul class="nav navbar-nav navbar-right">
                     <li>
-                        <a ui-sref="home" ng-click="nav.isCollapsed = !nav.isCollapsed">Inicio</a>
+                        <a ui-sref="home">Inicio</a>
                     </li>
                     <li>
-                        <a ui-sref="category({slug:'destinos'})" ng-click="nav.isCollapsed = !nav.isCollapsed">Destinos</a>
+                        <a ui-sref="category({slug:'destinos'})">Destinos</a>
                     </li>
                     <li>
-                        <a ui-sref="category({slug:'paquetes'})" ng-click="nav.isCollapsed = !nav.isCollapsed">Paquetes</a>
+                        <a ui-sref="category({slug:'paquetes'})">Paquetes</a>
                     </li>
                     <li>
-                        <a ui-sref="category({slug:'excursiones'})" ng-click="nav.isCollapsed = !nav.isCollapsed">Excursiones</a>
+                        <a ui-sref="category({slug:'excursiones'})">Excursiones</a>
                     </li>
                     <li>
-                        <a ui-sref="blog({kind: 'post'})" ng-click="nav.isCollapsed = !nav.isCollapsed">Blog</a>
+                        <a ui-sref="blog({kind: 'post'})">Blog</a>
                     </li>
                     <li>
-                        <a ui-sref="contact({kind: 'contact'})" ng-click="nav.isCollapsed = !nav.isCollapsed">Contacto</a>
+                        <a ui-sref="contact({kind: 'contact'})">Contacto</a>
                     </li>
                     <li>
                         <div id="wrap">
