--- a/app/index.html
+++ b/app/index.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="utf-8"/>
     <meta http-equiv="X-UA-Compatible" content="IE=edge,chrome=1"/>
-    <title ng-bind="pageTitle">Viajes Coral - Inicio</title>
+    <title ng-bind="pageTitle">Agencia de Viajes Coral - Inicio</title>
     <meta name="description" content="{{ post.excerpt }}">
     <meta name="keywords"
           content="Agencia de viajes Coral">
@@ -81,7 +81,7 @@
             <div class="collapse navbar-collapse" id="header-mainMenu">
                 <ul class="nav navbar-nav navbar-right">
                     <li>
-                        <a ui-sref="home">Inicio</a>
+                        <a ui-sref="home" ng-click="Home.Close">Inicio</a>
                     </li>
                     <li>
                         <a ui-sref="category({slug:'paquetes'})">Paquetes</a>
