--- a/app/index.html
+++ b/app/index.html
@@ -7,6 +7,7 @@
     <meta name="description" content="{{ post.excerpt }}">
     <meta name="keywords"
           content="Agencia de viajes Coral">
+    <meta name="theme-color" content="#79afa0">
     <meta content='width=device-width, initial-scale=1.0, maximum-scale=1.0, user-scalable=0' name='viewport'/>
     <base href="/">
     <!--Favicon-->
