Change phone in footer

--- a/app/index.html
+++ b/app/index.html
@@ -146,6 +146,7 @@
 <script src="lib/angular-toasty/dist/angular-toasty.js"></script>
 <script src="lib/angular-scroll/angular-scroll.js"></script>
 <script src="lib/angular-truncate/src/truncate.js"></script>
+<script src="lib/angular-touch/angular-touch.js"></script>
 <!-- endbower -->
 <!-- endbuild -->
 <!-- build:js js/annalise.min.js -->
