ajuste de estilo

--- a/app/index.html
+++ b/app/index.html
@@ -9,7 +9,7 @@
           content="Agencia de viajes Coral">
     <meta name="theme-color" content="#79afa0">
     <meta content='width=device-width, initial-scale=1.0, maximum-scale=1.0, user-scalable=0' name='viewport'/>
-    <base href="/">
+    <!--<base href="/">-->
     <!--Favicon-->
     <link href="img/ico/favicon.ico" rel="shortcut icon" type="favicon">
     <link rel="apple-touch-icon-precomposed" sizes="144x144" href="img/ico/apple-touch-icon-144-precomposed.png">
