--- a/app/index.html
+++ b/app/index.html
@@ -82,10 +82,10 @@
             <div class="collapse navbar-collapse" id="header-mainMenu">
                 <ul class="nav navbar-nav navbar-right nav-log">
                     <li>
-                        <a ui-sref="category({slug:'paquetes'})" ng-click="nav.close()">Iniciar sesión</a>
+                        <a ui-sref="login" ng-click="nav.close()">Iniciar sesión</a>
                     </li>
                     <li>
-                        <button class="btn btn-white-clear" ui-sref="contact({kind: 'contact'})" ng-click="nav.close()">Registrarme</button>
+                        <button class="btn btn-white-clear" ui-sref="register" ng-click="nav.close()">Registrarme</button>
                     </li>
                 </ul>
                 <ul class="nav navbar-nav navbar-right nav-main">
