--- a/app/index.html
+++ b/app/index.html
@@ -93,7 +93,7 @@
                         <a ui-sref="home" ng-click="nav.close()">Inicio</a>
                     </li>
                     <li>
-                        <a ui-sref="blog" ng-click="nav.close()">Ayuda</a>
+                        <a ui-sref="docs" ng-click="nav.close()">Ayuda</a>
                     </li>
                     <li>
                         <a ui-sref="contact({kind: 'contact'})" ng-click="nav.close()">Contacto</a>
