Change image default ulr

--- a/app/index.html
+++ b/app/index.html
@@ -3,11 +3,11 @@
 <head>
     <meta charset="utf-8"/>
     <meta http-equiv="X-UA-Compatible" content="IE=edge,chrome=1"/>
-    <title ng-bind="pageTitle">Agencia de Viajes Coral - Inicio</title>
+    <title ng-bind="pageTitle">Mercado Móvil - Pagos al instante</title>
     <meta name="description" content="{{ post.excerpt }}">
     <meta name="keywords"
-          content="Agencia de viajes Coral">
-    <meta name="theme-color" content="#79afa0">
+          content="Tu aliado estratégico en comercio móvil y procesamiento de pagos electrónicos">
+    <meta name="theme-color" content="#CB6C18">
     <meta content='width=device-width, initial-scale=1.0, maximum-scale=1.0, user-scalable=0' name='viewport'/>
     <!--<base href="/">-->
     <!--Favicon-->
@@ -36,7 +36,7 @@
           content="{{ post.urlImages.original }}"
           ng-if="post"/>
     <meta property="og:type" content="website"/>
-    <meta property="og:url" content="http://www.viajescoral.com{{ $state.href($state.current.name) }}"/>
+    <meta property="og:url" content="https://mercadomovil.com.mx{{ $state.href($state.current.name) }}"/>
     <link href='https://fonts.googleapis.com/css?family=Poppins:400,300,500' rel='stylesheet' type='text/css'>
     <!-- build:css css/style.min.css -->
     <!-- bower:css -->
