--- a/app/index.html
+++ b/app/index.html
@@ -82,10 +82,10 @@
             <div class="collapse navbar-collapse" id="header-mainMenu">
                 <ul class="nav navbar-nav navbar-right nav-log">
                     <li>
-                        <a ui-sref="login" ng-click="nav.close()">Iniciar sesión</a>
+                        <a href="https://mercadomovil.com.mx/hq/access/signin" ng-click="nav.close()">Iniciar sesión</a>
                     </li>
                     <li>
-                        <button class="btn btn-white-clear" ui-sref="register" ng-click="nav.close()">Registrarme</button>
+                        <a href="https://mercadomovil.com.mx/hq/access/register" class="btn btn-white-clear"  ng-click="nav.close()">Registrarme</a>
                     </li>
                 </ul>
                 <ul class="nav navbar-nav navbar-right nav-main">
