--- a/app/index.html
+++ b/app/index.html
@@ -85,7 +85,7 @@
                         <a href="https://mercadomovil.com.mx/hq/access/signin" ng-click="nav.close()">Iniciar sesión</a>
                     </li>
                     <li>
-                        <a href="https://mercadomovil.com.mx/hq/access/register" class="btn btn-white-clear"  ng-click="nav.close()">Registrarme</a>
+                        <button class="btn btn-white-clear" ui-sref="register" ng-click="nav.close()">Registrarme</button>
                     </li>
                 </ul>
                 <ul class="nav navbar-nav navbar-right nav-main">
