Fix external links

--- a/app/index.html
+++ b/app/index.html
@@ -75,17 +75,17 @@
                     <span class="icon-bar"></span>
                 </button>
                 <a class="navbar-brand" ui-sref="home"><img src="img/logo.png"
-                                                            class="logo" alt="Viajes Coral"></a>
+                                                            class="logo" alt="Mercado Móvil"></a>
             </div>
             <!-- Collect the nav links, forms, and other content for toggling -->
 
             <div class="collapse navbar-collapse" id="header-mainMenu">
                 <ul class="nav navbar-nav navbar-right nav-log">
                     <li>
-                        <a href="https://mercadomovil.com.mx/hq/access/signin" ng-click="nav.close()">Iniciar sesión</a>
+                        <a href="https://mercadomovil.com.mx/hq/access/signin" target="_self" ng-click="nav.close()">Iniciar sesión</a>
                     </li>
                     <li>
-                        <button class="btn btn-white-clear" ui-sref="register" ng-click="nav.close()">Registrarme</button>
+                        <a href="https://mercadomovil.com.mx/hq/access/register" target="_self" class="btn btn-white-clear"  ng-click="nav.close()">Registrarme</a>
                     </li>
                 </ul>
                 <ul class="nav navbar-nav navbar-right nav-main">
