--- a/app/index.html
+++ b/app/index.html
@@ -82,10 +82,10 @@
             <div class="collapse navbar-collapse" id="header-mainMenu">
                 <ul class="nav navbar-nav navbar-right nav-log">
                     <li>
-                        <a href="https://mercadomovil.com.mx/hq/access/signin" target="_self" ng-click="nav.close()">Iniciar sesión</a>
+                        <a href="//mercadomovil.com.mx/hq/access/signin" target="_blank" ng-click="nav.close()">Iniciar sesión</a>
                     </li>
                     <li>
-                        <a href="https://mercadomovil.com.mx/hq/access/register" target="_self" class="btn btn-white-clear"  ng-click="nav.close()">Registrarme</a>
+                        <a href="//mercadomovil.com.mx/hq/access/register" target="_blank"  ng-click="nav.close()">Registrarme</a>
                     </li>
                 </ul>
                 <ul class="nav navbar-nav navbar-right nav-main">
