ajuste de estilo en contacto

--- a/app/index.html
+++ b/app/index.html
@@ -97,16 +97,19 @@
                         <a ui-sref="home" ng-click="nav.close()">Inicio</a>
                     </li>
                     <li>
-                        <a ui-sref="docs" ng-click="nav.close()">Productos</a>
-                    </li>
-                    <li>
-                        <a ui-sref="docs" ng-click="nav.close()">Accesorios</a>
+                        <a ui-sref="docs" ng-click="nav.close()">Instalación</a>
                     </li>
                     <li>
                         <a ui-sref="docs" ng-click="nav.close()">Distribución</a>
                     </li>
                     <li>
+                        <a ui-sref="docs" ng-click="nav.close()">Fabricación</a>
+                    </li>
+                    <li>
                         <a ui-sref="docs" ng-click="nav.close()">Nosotros</a>
+                    </li>
+                    <li>
+                        <a ui-sref="blog({kind: 'post'})" ng-click="nav.close()">Blog</a>
                     </li>
                     <li>
                         <a ui-sref="contact({kind: 'contact'})" ng-click="nav.close()">Contacto</a>
