--- a/app/index.html
+++ b/app/index.html
@@ -97,16 +97,16 @@
                         <a ui-sref="home" ng-click="nav.close()">Inicio</a>
                     </li>
                     <li>
-                        <a ui-sref="docs" ng-click="nav.close()">Instalación</a>
+                        <a ui-sref="category({slug: 'instalacion'})" ng-click="nav.close()">Instalación</a>
                     </li>
                     <li>
-                        <a ui-sref="docs" ng-click="nav.close()">Distribución</a>
+                        <a ui-sref="category({slug: 'distribucion'})" ng-click="nav.close()">Distribución</a>
                     </li>
                     <li>
-                        <a ui-sref="docs" ng-click="nav.close()">Fabricación</a>
+                        <a ui-sref="category({slug: 'fabricacion'})" ng-click="nav.close()">Fabricación</a>
                     </li>
                     <li>
-                        <a ui-sref="docs" ng-click="nav.close()">Nosotros</a>
+                        <a ui-sref="page({slug: 'nosotros1473883051'})" ng-click="nav.close()">Nosotros</a>
                     </li>
                     <li>
                         <a ui-sref="blog({kind: 'post'})" ng-click="nav.close()">Blog</a>
@@ -177,24 +177,6 @@
     a.src = g;
     m.parentNode.insertBefore(a, m)
 })(window, document, 'script', '//www.google-analytics.com/analytics.js', 'ga');</script>
-<!--Start of Zopim Live Chat Script-->
-<script type="text/javascript">window.$zopim || (function (d, s) {
-    var z = $zopim = function (c) {
-        z._.push(c)
-    }, $ = z.s = d.createElement(s), e = d.getElementsByTagName(s)[0];
-    z.set = function (o) {
-        z.set._.push(o)
-    };
-    z._ = [];
-    z.set._ = [];
-    $.async = !0;
-    $.setAttribute("charset", "utf-8");
-    $.src = "//v2.zopim.com/?3DQuekMPJBa1SYYMojABAs1Qn3sg4S6P";
-    z.t = +new Date;
-    $.type = "text/javascript";
-    e.parentNode.insertBefore($, e)
-})(document, "script");</script>
-<!--End of Zopim Live Chat Script-->
 <toasty></toasty>
 </body>
 </html>
