--- a/app/index.html
+++ b/app/index.html
@@ -3,11 +3,11 @@
 <head>
     <meta charset="utf-8"/>
     <meta http-equiv="X-UA-Compatible" content="IE=edge,chrome=1"/>
-    <title ng-bind="pageTitle">Mercado Móvil - Pagos al instante</title>
+    <title ng-bind="pageTitle">Ainoxher - Tendencias y satisfacción</title>
     <meta name="description" content="{{ post.excerpt }}">
     <meta name="keywords"
-          content="Tu aliado estratégico en comercio móvil y procesamiento de pagos electrónicos">
-    <meta name="theme-color" content="#CB6C18">
+          content="Ainoxher - Tendencias y satisfacción, maquinaria industrial de alta calidad">
+    <meta name="theme-color" content="#c00">
     <meta content='width=device-width, initial-scale=1.0, maximum-scale=1.0, user-scalable=0' name='viewport'/>
     <!--<base href="/">-->
     <!--Favicon-->
