Connected home services

--- a/app/index.html
+++ b/app/index.html
@@ -36,7 +36,7 @@
           content="{{ post.urlImages.original }}"
           ng-if="post"/>
     <meta property="og:type" content="website"/>
-    <meta property="og:url" content="https://mercadomovil.com.mx{{ $state.href($state.current.name) }}"/>
+    <meta property="og:url" content="http://www.ainoxher.com.mx{{ $state.href($state.current.name) }}"/>
     <link href="https://fonts.googleapis.com/css?family=Roboto:300,400,700" rel="stylesheet">
     <!-- build:css css/style.min.css -->
     <!-- bower:css -->
@@ -87,7 +87,7 @@
                     <span class="icon-bar"></span>
                 </button>
                 <a class="navbar-brand" ui-sref="home"><img src="img/logo.png"
-                                                            class="logo" alt="Mercado Móvil"></a>
+                                                            class="logo" alt="Ainoxher - Tendencias y satisfacción"></a>
             </div>
             <!-- Collect the nav links, forms, and other content for toggling -->
 
