--- a/app/index.html
+++ b/app/index.html
@@ -103,6 +103,9 @@
                         <a ui-sref="category({slug: 'instalacion'})" ng-click="nav.close()">Instalación</a>
                     </li>
                     <li>
+                        <a ui-sref="category({slug: 'automatizacion'})" ng-click="nav.close()">Automatización</a>
+                    </li>
+                    <li>
                         <a ui-sref="category({slug: 'distribucion'})" ng-click="nav.close()">Distribución</a>
                     </li>
                     <li>
