--- a/app/index.html
+++ b/app/index.html
@@ -75,7 +75,7 @@
         </div>
     </div>
     <nav class="navbar navbar-default" ng-controller="NavBarCtrl as nav">
-        <div class="container">
+        <div class="container container-tab">
             <!-- Brand and toggle get grouped for better mobile display -->
 
             <div class="navbar-header">
