add target blank to a elements

--- a/app/index.html
+++ b/app/index.html
@@ -68,9 +68,9 @@
                 536 3150</a></p>
 
             <p class="pull-right">
-                <a href="#"><i class="fa fa-facebook-square"></i></a>
-                <a href="#"><i class="fa fa-twitter-square"></i></a>
-                <a href="#"><i class="fa fa-google-plus-square"></i></a>
+                <a href="https://www.facebook.com/ainoxher.tendenciasysatisfaccion?fref=ts" target="_blank"><i class="fa fa-facebook-square"></i></a>
+                <a href="#" target="_blank"><i class="fa fa-twitter-square"></i></a>
+                <a href="#" target="_blank"><i class="fa fa-google-plus-square"></i></a>
             </p>
         </div>
     </div>
